#############################################################################
  - NEW FEATURES
    * Modified the license to allow exceptions for packaging APBS binaries
      with several visualization programs.  PMG license modifed as well.
    * Added a DONEUMANN macro to vfetk.c to test FEM problems with all Neumann
      boundary conditions (e.g., membranes).
  - BUG FIXES
    * Fixed problems with FEM-based LPBE and LRPBE calculations
    * Fixed a minor bug in the configure script that prevented MPI libraries
      from being found when using certain compilers.
    * Updated acinclude.m4, aclocal.m4, config/* for new version (1.9) of
      automake and compatibility with new MALOC
	
#############################################################################
BETA PUBLIC RELEASE VERSION 0.4.0       12-14-05 
#############################################################################
  - NEW FEATURES
    * New version of the 'acc' program available.
    * Added additional verbosity to APBS output.
    * Added tools/python/vgrid to the autoconf script. The directory compiles
      with the rest of the Python utilities and is used for manipulating
      dx files.
    * Modified the tools/python/noinput.py example to show the ability to get
      and print energy and force vectors directly into Python arrays.
    * Added dx2uhbd tool to tools/mesh for converting from dx format to UHBD
      format (Thanks to Robert Konecny)
    * Added ability of tools/manip/inputgen.py to split a single mg-para APBS
      input file into multiple asynchronous input files.
    * Modified inputgen.py to be more flexible for developers wishing to
      directly interface with APBS.
    * Added Vclist cell list class to replace internal hash table in Vacc
    * Modified Vacc class to use Vclist, including changes to the Vacc
      interface (and required changes throughout the code)
    * Consolidated Vpmg_ctor and Vpmg_ctorFocus into Vpmg_ctor